--- a/cricfreak/src/main/resources/application.properties
+++ b/cricfreak/src/main/resources/application.properties
@@ -4,3 +4,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/project
 spring.datasource.username=root
 #password
 spring.datasource.password=admin
+
+# Hibernate Properties
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
